--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <h1>Drinks</h1>
-    <div>
+    <div class="card">
         <header>
             <h2>Bubble Tea</h2>
         </header>
     </div>
-    <div>
+    <div class="card">
         <header>
             <h2>Cappucino</h2>
         </header>
     </div>
-    <div>
+    <div class="card">
         <header>
             <h2>Latte</h2>
         </header>
     </div>
-    <div>
+    <div class="card">
         <header>
             <h2>Frappucino</h2>
         </header>
