--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
 </head>
 <body>
     <h1>Drinks</h1>
-    <div class="card">
-        <header>
-            <h2>Bubble Tea</h2>
-        </header>
+    <div class="row">
+        <div class="card">
+            <header>
+                <h2>Bubble Tea</h2>
+            </header>
+        </div>
+        <div class="card">
+            <header>
+                <h2>Cappucino</h2>
+            </header>
+        </div>
+        <div class="card">
+            <header>
+                <h2>Latte</h2>
+            </header>
+        </div>
     </div>
-    <div class="card">
-        <header>
-            <h2>Cappucino</h2>
-        </header>
-    </div>
-    <div class="card">
-        <header>
-            <h2>Latte</h2>
-        </header>
-    </div>
-    <div class="card">
-        <header>
-            <h2>Frappucino</h2>
-        </header>
-    </div>
+    <div class="row">  
+        <div class="card">
+            <header>
+                <h2>Frappucino</h2>
+            </header>
+        </div>
+    </div> 
     <script src="./main.js"></script>
 </body>
 </html>
