changed html and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="row">  
         <div class="card">
             <header>
-                <h2>Frappucino</h2>
+                <h2>Frappucinos</h2>
             </header>
         </div>
     </div> 
