--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
                 <p>Available</p>
             </div>
+            <div>
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Small</p>
+                <p>Weight: 4 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div>
         </div>
         <div class="card">
             <header>
@@ -28,7 +38,17 @@
                 <img src="https://pbs.twimg.com/profile_images/2943385437/550349f9b0e3d35dadf1933189a2e188.jpeg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
                 <p>Not Available</p>
-            </div>            
+            </div> 
+            <div>
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: MEdium</p>
+                <p>Weight: 8 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div>           
         </div>
         <div class="card">
             <header>
@@ -38,7 +58,17 @@
                 <img src="https://ohsheglows.com/gs_images/2017/09/Pumpkin-spice-latte00025-256x256.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
                 <p>Available</p>
-            </div>  
+            </div> 
+            <div>
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Small</p>
+                <p>Weight: 4 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div> 
         </div>
     </div>
     <div class="row">  
@@ -51,6 +81,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
                 <p>Available</p>
             </div> 
+            <div>
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Large</p>
+                <p>Weight: 12 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div>
         </div>
     </div> 
     <script src="./main.js"></script>
