--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                     Specifications valid until 8/22/2019
                 </footer>
             </div>
+            <div>
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $5.99</p>
+                <p>2: $10.99</p>
+                <p>3: $14.99</p>
+            </div>
         </div>
         <div class="card">
             <header>
@@ -43,12 +51,20 @@
                 <header>
                     <h4>Specifications</h4>
                 </header>
-                <p>Size: MEdium</p>
+                <p>Size: Medium</p>
                 <p>Weight: 8 oz</p>
                 <footer>
                     Specifications valid until 8/22/2019
                 </footer>
-            </div>           
+            </div> 
+            <div>
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $6.99</p>
+                <p>2: $11.99</p>
+                <p>3: $15.99</p>
+            </div>          
         </div>
         <div class="card">
             <header>
@@ -69,6 +85,14 @@
                     Specifications valid until 8/22/2019
                 </footer>
             </div> 
+            <div>
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $4.99</p>
+                <p>2: $7.99</p>
+                <p>3: $11.99</p>
+            </div>
         </div>
     </div>
     <div class="row">  
@@ -90,6 +114,14 @@
                 <footer>
                     Specifications valid until 8/22/2019
                 </footer>
+            </div>
+            <div>
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $6.99</p>
+                <p>2: $11.99</p>
+                <p>3: $15.99</p>
             </div>
         </div>
     </div> 
