--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div>
                 <img src="https://cdn140.picsart.com/296686210054201.jpg?c256x256" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Available</p>
+                <p class="availability">Available</p>
             </div>
-            <div>
+            <div class="specs">
                 <header>
                     <h4>Specifications</h4>
                 </header>
@@ -29,7 +29,7 @@
                     Specifications valid until 8/22/2019
                 </footer>
             </div>
-            <div>
+            <div class="prices">
                 <header>
                     <h4>Pricing</h4>
                 </header>
@@ -45,9 +45,9 @@
             <div>
                 <img src="https://pbs.twimg.com/profile_images/2943385437/550349f9b0e3d35dadf1933189a2e188.jpeg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Not Available</p>
+                <p class="availability">Not Available</p>
             </div> 
-            <div>
+            <div class="specs">
                 <header>
                     <h4>Specifications</h4>
                 </header>
@@ -57,7 +57,7 @@
                     Specifications valid until 8/22/2019
                 </footer>
             </div> 
-            <div>
+            <div class="prices">
                 <header>
                     <h4>Pricing</h4>
                 </header>
@@ -73,9 +73,9 @@
             <div>
                 <img src="https://ohsheglows.com/gs_images/2017/09/Pumpkin-spice-latte00025-256x256.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Available</p>
+                <p class="availability">Available</p>
             </div> 
-            <div>
+            <div class="specs">
                 <header>
                     <h4>Specifications</h4>
                 </header>
@@ -85,7 +85,7 @@
                     Specifications valid until 8/22/2019
                 </footer>
             </div> 
-            <div>
+            <div class="prices"> 
                 <header>
                     <h4>Pricing</h4>
                 </header>
@@ -103,9 +103,9 @@
             <div>
                 <img src="https://pbs.twimg.com/profile_images/1114260804189085696/-qOAG9r7_reasonably_small.png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Available</p>
+                <p class="availability">Available</p>
             </div> 
-            <div>
+            <div class="specs">
                 <header>
                     <h4>Specifications</h4>
                 </header>
@@ -115,7 +115,7 @@
                     Specifications valid until 8/22/2019
                 </footer>
             </div>
-            <div>
+            <div class="prices">
                 <header>
                     <h4>Pricing</h4>
                 </header>
