--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Zetta&display=swap" rel="fontStyle">
     <link rel="stylesheet" href="./main.css">
     <title>Product Cards</title>
 </head>
@@ -17,7 +18,25 @@
             <div>
                 <img src="https://cdn140.picsart.com/296686210054201.jpg?c256x256" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Available</p>
+                <p class="availability">Available</p>
+            </div>
+            <div class="specs">
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Small</p>
+                <p>Weight: 4 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div>
+            <div class="prices">
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $5.99</p>
+                <p>2: $10.99</p>
+                <p>3: $14.99</p>
             </div>
         </div>
         <div class="card">
@@ -25,10 +44,29 @@
                 <h2>Cappucino</h2>
             </header>
             <div>
-                <img src="https://pbs.twimg.com/profile_images/2943385437/550349f9b0e3d35dadf1933189a2e188.jpeg" alt="">
+                <img src="https://pbs.twimg.com/profile_images/2943385437/550349f9b0e3d35dadf1933189a2e188.jpeg" alt="" class="cappucino">
+                <img class="soldOutLogo" src="https://raw.githubusercontent.com/morecallan/css102-e6/master/images/soldOut.png">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Not Available</p>
-            </div>            
+                <p class="availability">Not Available</p>
+            </div> 
+            <div class="specs">
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Medium</p>
+                <p>Weight: 8 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div> 
+            <div class="prices">
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $6.99</p>
+                <p>2: $11.99</p>
+                <p>3: $15.99</p>
+            </div>          
         </div>
         <div class="card">
             <header>
@@ -37,8 +75,26 @@
             <div>
                 <img src="https://ohsheglows.com/gs_images/2017/09/Pumpkin-spice-latte00025-256x256.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Available</p>
-            </div>  
+                <p class="availability">Available</p>
+            </div> 
+            <div class="specs">
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Small</p>
+                <p>Weight: 4 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div> 
+            <div class="prices"> 
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $4.99</p>
+                <p>2: $7.99</p>
+                <p>3: $11.99</p>
+            </div>
         </div>
     </div>
     <div class="row">  
@@ -49,8 +105,26 @@
             <div>
                 <img src="https://pbs.twimg.com/profile_images/1114260804189085696/-qOAG9r7_reasonably_small.png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor id eu nisl nunc. Auctor elit sed vulputate mi sit. Sit amet mattis vulputate enim.</p>
-                <p>Available</p>
+                <p class="availability">Available</p>
             </div> 
+            <div class="specs">
+                <header>
+                    <h4>Specifications</h4>
+                </header>
+                <p>Size: Large</p>
+                <p>Weight: 12 oz</p>
+                <footer>
+                    Specifications valid until 8/22/2019
+                </footer>
+            </div>
+            <div class="prices">
+                <header>
+                    <h4>Pricing</h4>
+                </header>
+                <p>1: $6.99</p>
+                <p>2: $11.99</p>
+                <p>3: $15.99</p>
+            </div>
         </div>
     </div> 
     <script src="./main.js"></script>
